--- a/WeatherPy1.ipynb
+++ b/WeatherPy1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -39,14 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['tsihombe', 'taolanaro', 'kansanshi', 'bengkulu', 'bambous virieux']\n"
+      "['beloha', 'new norfolk', 'taolanaro', 'saint-philippe', 'busselton']\n",
+      "['MG', 'AU', 'MG', 'RE', 'AU']\n"
      ]
     }
    ],
@@ -65,25 +66,38 @@
     "se_city_names=[]\n",
     "sw_city_names=[]\n",
     "\n",
+    "ne_country_codes=[]\n",
+    "nw_country_codes=[]\n",
+    "se_country_codes=[]\n",
+    "sw_country_codes=[]\n",
     "\n",
     "for cord in ne_coords:\n",
     "    city = citipy.nearest_city(cord[0],cord[1])\n",
     "    ne_city_names.append(city.city_name)\n",
+    "    ne_country_codes.append(city.country_code)\n",
+    "    ne_country_codes = [x.upper() for x in ne_country_codes]\n",
     "    \n",
     "for cord in nw_coords:\n",
     "    city = citipy.nearest_city(cord[0],cord[1])\n",
     "    nw_city_names.append(city.city_name)\n",
+    "    nw_country_codes.append(city.country_code)\n",
+    "    nw_country_codes = [x.upper() for x in nw_country_codes]\n",
     "\n",
     "\n",
     "for cord in se_coords:\n",
     "    city = citipy.nearest_city(cord[0],cord[1])\n",
     "    se_city_names.append(city.city_name)\n",
+    "    se_country_codes.append(city.country_code)\n",
+    "    se_country_codes = [x.upper() for x in se_country_codes]\n",
     "    \n",
     "for cord in sw_coords:\n",
     "    city = citipy.nearest_city(cord[0],cord[1])\n",
     "    sw_city_names.append(city.city_name)\n",
+    "    sw_country_codes.append(city.country_code)\n",
+    "    sw_country_codes = [x.upper() for x in sw_country_codes]\n",
     "\n",
     "print(ne_city_names)\n",
+    "print(ne_country_codes)\n",
     "# print('-------')\n",
     "# print(nw_city_names)\n",
     "# print('-------')\n",
@@ -103,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,29 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing Data Retrival\n",
-      "{\n",
-      "    \"cod\": \"404\",\n",
-      "    \"message\": \"city not found\"\n",
-      "}\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'main'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-eb748e1d2ac7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweather_response\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msort_keys\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m         \u001b[0mne_mtemp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweather_response\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'main'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'temp_max'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mNameError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mne_mtemp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'NAN'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'main'"
+      "Max Temp: [55, 78.01, 57.99, 51.8, 82.98]\n",
+      "Latitude: [-22.12, -33.65, -46.28, -34.53, -0.6]\n",
+      "Longitude: [14.28, 115.33, 169.85, 20.04, 73.08]\n",
+      "Humidity: [90, 30, 85, 62, 76]\n",
+      "Cloudiness: ['clear sky', 'clear sky', 'light rain', 'few clouds', 'broken clouds']\n",
+      "Wind speed: [1.01, 8.46, 5.99, 5.82, 10.94]\n",
+      "Date: [1604021378, 1604021215, 1604021234, 1604021223, 1604021219]\n"
      ]
     }
    ],
@@ -158,7 +163,7 @@
     "for city in ne_city_names:   \n",
     "    weather_response = requests.get(query_url+city).json()\n",
     "\n",
-    "    print(json.dumps(weather_response, indent=4, sort_keys=True))\n",
+    "#    print(json.dumps(weather_response, indent=4, sort_keys=True))\n",
     "    try:\n",
     "        ne_mtemp.append(weather_response['main']['temp_max'])\n",
     "    except NameError:\n",
@@ -172,14 +177,13 @@
     "    except NameError:\n",
     "        ne_lon.append('NAN')\n",
     "\n",
-    "##### was working above this line\n",
     "    try:\n",
     "        ne_humidity.append(weather_response['main']['humidity'])\n",
     "    except NameError:\n",
     "        ne_humidity.append('NAN')\n",
     "    try:\n",
-    "        ne_cloudiness.append(weather_response[\"weather\"][\"description\"])\n",
-    "    except TypeError:\n",
+    "        ne_cloudiness.append(weather_response[\"weather\"][0]['description'])\n",
+    "    except NameError:\n",
     "        ne_cloudiness.append('NAN')\n",
     "    try:\n",
     "        ne_wind_speed.append(weather_response['wind']['speed'])\n",
@@ -190,40 +194,155 @@
     "    except NameError:\n",
     "        ne_date.append('NAN')\n",
     "\n",
+    "   \n",
     "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "print(ne_mtemp)\n",
-    "print(ne_lat)\n",
-    "print(ne_lon)\n",
-    "print(ne_humidity)\n",
-    "print(ne_cloudiness)\n",
-    "print(ne_wind_speed)\n",
-    "print(ne_date)\n",
+    "print(f\"Max Temp: {ne_mtemp}\")\n",
+    "print(f\"Latitude: {ne_lat}\")\n",
+    "print(f'Longitude: {ne_lon}')\n",
+    "print(f'Humidity: {ne_humidity}')\n",
+    "print(f\"Cloudiness: {ne_cloudiness}\")\n",
+    "print(f\"Wind speed: {ne_wind_speed}\")\n",
+    "print(f\"Date: {ne_date}\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'api_key' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-d226c78474d0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Build partial query URL\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mquery_url\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mf\"{url}appid={api_key}&units={units}&q=\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;31m#print(query_url)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'api_key' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>henties bay</td>\n",
+       "      <td>-22.12</td>\n",
+       "      <td>14.28</td>\n",
+       "      <td>55.00</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>na</td>\n",
+       "      <td>1604021378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>busselton</td>\n",
+       "      <td>-33.65</td>\n",
+       "      <td>115.33</td>\n",
+       "      <td>78.01</td>\n",
+       "      <td>30</td>\n",
+       "      <td>8.46</td>\n",
+       "      <td>au</td>\n",
+       "      <td>1604021215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>kaitangata</td>\n",
+       "      <td>-46.28</td>\n",
+       "      <td>169.85</td>\n",
+       "      <td>57.99</td>\n",
+       "      <td>85</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>nz</td>\n",
+       "      <td>1604021234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bredasdorp</td>\n",
+       "      <td>-34.53</td>\n",
+       "      <td>20.04</td>\n",
+       "      <td>51.80</td>\n",
+       "      <td>62</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>za</td>\n",
+       "      <td>1604021223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>hithadhoo</td>\n",
+       "      <td>-0.60</td>\n",
+       "      <td>73.08</td>\n",
+       "      <td>82.98</td>\n",
+       "      <td>76</td>\n",
+       "      <td>10.94</td>\n",
+       "      <td>mv</td>\n",
+       "      <td>1604021219</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          City    Lat     Lng  Max Temp  Humidity  Wind Speed Country  \\\n",
+       "0  henties bay -22.12   14.28     55.00        90        1.01      na   \n",
+       "1    busselton -33.65  115.33     78.01        30        8.46      au   \n",
+       "2   kaitangata -46.28  169.85     57.99        85        5.99      nz   \n",
+       "3   bredasdorp -34.53   20.04     51.80        62        5.82      za   \n",
+       "4    hithadhoo  -0.60   73.08     82.98        76       10.94      mv   \n",
+       "\n",
+       "         Date  \n",
+       "0  1604021378  \n",
+       "1  1604021215  \n",
+       "2  1604021234  \n",
+       "3  1604021223  \n",
+       "4  1604021219  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Export into city data into .csv file\n",
+    "# Build Data Frame\n",
+    "\n",
+    "weather_dict = {\n",
+    "    \"City\": ne_city_names,\n",
+    "    \"Lat\": ne_lat,\n",
+    "    \"Lng\": ne_lon,\n",
+    "    \"Max Temp\": ne_mtemp,\n",
+    "    \"Humidity\": ne_humidity, \n",
+    "    \"Wind Speed\": ne_wind_speed,\n",
+    "    \"Country\": ne_country_codes,\n",
+    "    \"Date\": ne_date\n",
+    "}\n",
+    "weather_data = pd.DataFrame(weather_dict)\n",
+    "weather_data\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
