working to data frame

--- a/WeatherPy1.ipynb
+++ b/WeatherPy1.ipynb
@@ -39,15 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['beloha', 'new norfolk', 'taolanaro', 'saint-philippe', 'busselton']\n",
-      "['MG', 'AU', 'MG', 'RE', 'AU']\n"
+      "['hithadhoo', 'souillac', 'new norfolk', 'port elizabeth', 'bredasdorp']\n",
+      "['MV', 'MU', 'AU', 'ZA', 'ZA']\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,20 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max Temp: [55, 78.01, 57.99, 51.8, 82.98]\n",
-      "Latitude: [-22.12, -33.65, -46.28, -34.53, -0.6]\n",
-      "Longitude: [14.28, 115.33, 169.85, 20.04, 73.08]\n",
-      "Humidity: [90, 30, 85, 62, 76]\n",
-      "Cloudiness: ['clear sky', 'clear sky', 'light rain', 'few clouds', 'broken clouds']\n",
-      "Wind speed: [1.01, 8.46, 5.99, 5.82, 10.94]\n",
-      "Date: [1604021378, 1604021215, 1604021234, 1604021223, 1604021219]\n"
+      "Max Temp: [82.98, 68, 66.99, 55.4, 51.8]\n",
+      "Latitude: [-0.6, -20.52, -42.78, -33.92, -34.53]\n",
+      "Longitude: [73.08, 57.52, 147.06, 25.57, 20.04]\n",
+      "Humidity: [76, 69, 54, 82, 62]\n",
+      "Cloudiness: ['broken clouds', 'light rain', 'overcast clouds', 'clear sky', 'few clouds']\n",
+      "Wind speed: [10.94, 7, 1.01, 11.41, 5.82]\n",
+      "Date: [1604021219, 1604021212, 1604021563, 1604021441, 1604021223]\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -247,86 +247,87 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>henties bay</td>\n",
-       "      <td>-22.12</td>\n",
-       "      <td>14.28</td>\n",
-       "      <td>55.00</td>\n",
-       "      <td>90</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>na</td>\n",
-       "      <td>1604021378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>busselton</td>\n",
-       "      <td>-33.65</td>\n",
-       "      <td>115.33</td>\n",
-       "      <td>78.01</td>\n",
-       "      <td>30</td>\n",
-       "      <td>8.46</td>\n",
-       "      <td>au</td>\n",
-       "      <td>1604021215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>kaitangata</td>\n",
-       "      <td>-46.28</td>\n",
-       "      <td>169.85</td>\n",
-       "      <td>57.99</td>\n",
-       "      <td>85</td>\n",
-       "      <td>5.99</td>\n",
-       "      <td>nz</td>\n",
-       "      <td>1604021234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>bredasdorp</td>\n",
-       "      <td>-34.53</td>\n",
-       "      <td>20.04</td>\n",
-       "      <td>51.80</td>\n",
-       "      <td>62</td>\n",
-       "      <td>5.82</td>\n",
-       "      <td>za</td>\n",
-       "      <td>1604021223</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>hithadhoo</td>\n",
        "      <td>-0.60</td>\n",
        "      <td>73.08</td>\n",
        "      <td>82.98</td>\n",
        "      <td>76</td>\n",
        "      <td>10.94</td>\n",
-       "      <td>mv</td>\n",
+       "      <td>MV</td>\n",
        "      <td>1604021219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>souillac</td>\n",
+       "      <td>-20.52</td>\n",
+       "      <td>57.52</td>\n",
+       "      <td>68.00</td>\n",
+       "      <td>69</td>\n",
+       "      <td>7.00</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>1604021212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>new norfolk</td>\n",
+       "      <td>-42.78</td>\n",
+       "      <td>147.06</td>\n",
+       "      <td>66.99</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1604021563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>port elizabeth</td>\n",
+       "      <td>-33.92</td>\n",
+       "      <td>25.57</td>\n",
+       "      <td>55.40</td>\n",
+       "      <td>82</td>\n",
+       "      <td>11.41</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1604021441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>bredasdorp</td>\n",
+       "      <td>-34.53</td>\n",
+       "      <td>20.04</td>\n",
+       "      <td>51.80</td>\n",
+       "      <td>62</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1604021223</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          City    Lat     Lng  Max Temp  Humidity  Wind Speed Country  \\\n",
-       "0  henties bay -22.12   14.28     55.00        90        1.01      na   \n",
-       "1    busselton -33.65  115.33     78.01        30        8.46      au   \n",
-       "2   kaitangata -46.28  169.85     57.99        85        5.99      nz   \n",
-       "3   bredasdorp -34.53   20.04     51.80        62        5.82      za   \n",
-       "4    hithadhoo  -0.60   73.08     82.98        76       10.94      mv   \n",
+       "             City    Lat     Lng  Max Temp  Humidity  Wind Speed Country  \\\n",
+       "0       hithadhoo  -0.60   73.08     82.98        76       10.94      MV   \n",
+       "1        souillac -20.52   57.52     68.00        69        7.00      MU   \n",
+       "2     new norfolk -42.78  147.06     66.99        54        1.01      AU   \n",
+       "3  port elizabeth -33.92   25.57     55.40        82       11.41      ZA   \n",
+       "4      bredasdorp -34.53   20.04     51.80        62        5.82      ZA   \n",
        "\n",
        "         Date  \n",
-       "0  1604021378  \n",
-       "1  1604021215  \n",
-       "2  1604021234  \n",
-       "3  1604021223  \n",
-       "4  1604021219  "
+       "0  1604021219  \n",
+       "1  1604021212  \n",
+       "2  1604021563  \n",
+       "3  1604021441  \n",
+       "4  1604021223  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Export into city data into .csv file\n",
+    "\n",
     "# Build Data Frame\n",
     "\n",
     "weather_dict = {\n",
