work started on VacationPy - working through screening criteria

--- a/WeatherPy2.ipynb
+++ b/WeatherPy2.ipynb
@@ -2308,7 +2308,7 @@
     }
    ],
    "source": [
-    "# Note: need to ddetermine how to format numbers properly in DF\n",
+    "# Note: need to determine how to format numbers properly in DF\n",
     "\n",
     "clean_city_data.head()"
    ]
