--- a/VacationPy_starter.ipynb
+++ b/VacationPy_starter.ipynb
@@ -159,9 +159,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python [conda env:PythonData] *",
    "language": "python",
-   "name": "pydev"
+   "name": "conda-env-PythonData-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
