Ideal Vacation City Data Frame created

--- a/VacationPy1.ipynb
+++ b/VacationPy1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "4      AU  1.604115e+09  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,6 +177,7 @@
     "# clean_city_data.head()\n",
     "\n",
     "#import csv as data frame for test file\n",
+    "\n",
     "city_data_test = pd.read_csv(\".\\output\\city_data_test.csv\")\n",
     "#city_data_test.head(10)\n",
     "\n",
@@ -188,6 +189,7 @@
     "city_data_test[\"Max Temp\"] = city_data_test[\"Max Temp\"].astype(float)\n",
     "city_data_test[\"Cloudiness\"] = city_data_test[\"Cloudiness\"].astype(float)\n",
     "#city_data_test[\"Date\"] = pd.to_datetime(city_data_test[\"Date\"], format = '%Y%m%d')\n",
+    "\n",
     "\n",
     "#Drop cities that are missing value & shows stats for test\n",
     "clean_city_data_test = city_data_test.dropna()\n",
@@ -209,13 +211,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4091fb6c1c9c4d4999d33513014c20d6",
+       "model_id": "582d8dcd71194d5f902a1c070d73df07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,13 +230,13 @@
     }
    ],
    "source": [
-    "# Create 1st Heat Map of city humidity\n",
+    "# Create city humidity heat Map of all of Part 1s data \n",
     "\n",
     "# Store latitude and longitude in locations\n",
     "locations = clean_city_data_test[[\"Lat\", \"Lng\"]]\n",
     "\n",
     "# Convert Humidity to float JIC\n",
-    "rating = clean_city_data_test[\"Humidity\"].astype(float) \n",
+    "rating = clean_city_data_test[\"Humidity\"] \n",
     "\n",
     "# Plot Heatmap\n",
     "fig_13 = gmaps.figure()\n",
@@ -242,13 +244,196 @@
     "# Create heat layer\n",
     "heat_layer = gmaps.heatmap_layer(locations, weights=rating, \n",
     "                                 dissipating=False, max_intensity=100,\n",
-    "                                 point_radius=5)\n",
+    "                                 point_radius=2)\n",
     "\n",
     "# Add layer\n",
     "fig_13.add_layer(heat_layer)\n",
     "\n",
     "# Display figure\n",
-    "fig_13"
+    "fig_13\n",
+    "\n",
+    "# Save a png\n",
+    "#fig_13.figure.savefig('.\\output\\City_Humidity Heatmap.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create new DataFrame fitting weather criteria\n",
+    "* Narrow down the cities to fit weather conditions.\n",
+    "* Drop any rows will null values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>New Norfolk</td>\n",
+       "      <td>33.28</td>\n",
+       "      <td>134.15</td>\n",
+       "      <td>68.00</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Yulara</td>\n",
+       "      <td>21.23</td>\n",
+       "      <td>81.63</td>\n",
+       "      <td>69.80</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Hobart</td>\n",
+       "      <td>43.32</td>\n",
+       "      <td>145.57</td>\n",
+       "      <td>51.80</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Tairua</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>54.09</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>Mount Gambier</td>\n",
+       "      <td>13.49</td>\n",
+       "      <td>106.98</td>\n",
+       "      <td>85.60</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>7.29</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>Kununurra</td>\n",
+       "      <td>-8.93</td>\n",
+       "      <td>125.41</td>\n",
+       "      <td>80.38</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City    Lat     Lng  Max Temp  Humidity  Wind Speed  Cloudiness  \\\n",
+       "1     New Norfolk  33.28  134.15     68.00      30.0        3.36        20.0   \n",
+       "4          Yulara  21.23   81.63     69.80      64.0        3.36         0.0   \n",
+       "16         Hobart  43.32  145.57     51.80      53.0        9.17        20.0   \n",
+       "44         Tairua  17.02   54.09     73.40      38.0        3.36         0.0   \n",
+       "74  Mount Gambier  13.49  106.98     85.60      67.0        7.29         0.0   \n",
+       "84      Kununurra  -8.93  125.41     80.38      39.0        4.00         0.0   \n",
+       "\n",
+       "   Country          Date  \n",
+       "1       AU  1.604115e+09  \n",
+       "4       AU  1.604115e+09  \n",
+       "16      AU  1.604115e+09  \n",
+       "44      NZ  1.604115e+09  \n",
+       "74      AU  1.604115e+09  \n",
+       "84      AU  1.604115e+09  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_city_data_test.head()\n",
+    "# Reduce amount based on Weather criteria  Humidity <= 75.  Max Temp > 50.  Wind Speed <10.  Cloudiness <30\n",
+    "\n",
+    "ideal_city = clean_city_data_test.loc[(clean_city_data_test[\"Wind Speed\"] <10) & \n",
+    "                                      (clean_city_data_test[\"Humidity\"] < 75) &\n",
+    "                                      (clean_city_data_test[\"Max Temp\"]> 50) &\n",
+    "                                      (clean_city_data_test[\"Wind Speed\"] < 10) &\n",
+    "                                      (clean_city_data_test[\"Cloudiness\"] < 30)\n",
+    "                                     ]\n",
+    "\n",
+    "ideal_city.head(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hotel Map\n",
+    "* Store into variable named `hotel_df`.\n",
+    "* Add a \"Hotel Name\" column to the DataFrame.\n",
+    "* Set parameters to search for hotels with 5000 meters.\n",
+    "* Hit the Google Places API for each city's coordinates.\n",
+    "* Store the first Hotel result into the DataFrame.\n",
+    "* Plot markers on top of the heatmap."
    ]
   },
   {
@@ -288,71 +473,6 @@
     "    \n",
     "    \n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gjete\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  import sys\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Weather criteria\n",
-    "\n",
-    "# Humidity <= 75.  Max Temp > 50.  Wind Speed <10.  Cloudiness <30\n",
-    "\n",
-    "#city_data_test[\"Humidity\"] = city_data_test[\"Humidity\"].astype(float)\n",
-    "\n",
-    "clean_city_data_test[\"Humidity\"] = clean_city_data_test[\"Humidity\"] < 70\n",
-    "# # ideal_cities\n",
-    "# ideal_cities = clean_city_data_test[\"Max Temp\"] > 50\n",
-    "# # ideal_cities\n",
-    "# ideal_cities = clean_city_data_test[\"Wind Speed\"] < 10\n",
-    "# # ideal_cities\n",
-    "# ideal_cities = clean_city_data_test[\"Cloudiness\"] < 30\n",
-    "\n",
-    "# ideal_cities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create new DataFrame fitting weather criteria\n",
-    "* Narrow down the cities to fit weather conditions.\n",
-    "* Drop any rows will null values."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Hotel Map\n",
-    "* Store into variable named `hotel_df`.\n",
-    "* Add a \"Hotel Name\" column to the DataFrame.\n",
-    "* Set parameters to search for hotels with 5000 meters.\n",
-    "* Hit the Google Places API for each city's coordinates.\n",
-    "* Store the first Hotel result into the DataFrame.\n",
-    "* Plot markers on top of the heatmap."
    ]
   },
   {
