--- a/WeatherPy2.ipynb
+++ b/WeatherPy2.ipynb
@@ -2176,7 +2176,7 @@
     }
    ],
    "source": [
-    "# Drop cities taht are missing values.  There are no cities with humidity over 100\n",
+    "# Drop cities that are missing values.  There are no cities with humidity over 100\n",
     "\n",
     "clean_city_data = city_data.dropna()\n",
     "clean_city_data.describe()\n"
