Added analysis sentences to WeatherPy

--- a/WeatherPy2.ipynb
+++ b/WeatherPy2.ipynb
@@ -2350,7 +2350,10 @@
     "plt.show()\n",
     "\n",
     "# Save a png - Not opening correctly as a PNG\n",
-    "fig_1.figure.savefig('.\\output\\Lat-Temp.png')\n"
+    "fig_1.figure.savefig('.\\output\\Lat-Temp.png')\n",
+    "\n",
+    "#This graph visually shows that as cities from the northern hemisphere get close to the equator, the maximum temperature increases.   \n",
+    "# A larger number of the sample cities ~10 degrees south of the equator share the same maximum temps as the equator. "
    ]
   },
   {
@@ -2390,7 +2393,10 @@
     "plt.show()\n",
     "\n",
     "# Save a png - Not opening correctly as a PNG\n",
-    "fig_2.figure.savefig('.\\output\\Humid-Lat.png')\n"
+    "fig_2.figure.savefig('.\\output\\Humid-Lat.png')\n",
+    "\n",
+    "#Fig_2 depicts that across the northern and southern hemisphere, the percent humidity is pretty much a uniform distribution for much of the globe.  \n",
+    "#There appears to be a phase shift in increased humidity near the northern 50-degree latitude where humidity is higher than the rest of the globe."
    ]
   },
   {
@@ -2430,7 +2436,9 @@
     "plt.show()\n",
     "\n",
     "# Save a png - Not opening correctly as a PNG\n",
-    "fig_3.figure.savefig('.\\output\\Cloud-Lat.png')"
+    "fig_3.figure.savefig('.\\output\\Cloud-Lat.png')\n",
+    "\n",
+    "#Fig_3 depicts that that cloudiness concentrates near 100% and near 0%.  This is consistent across all latitudes."
    ]
   },
   {
@@ -2470,7 +2478,9 @@
     "plt.show()\n",
     "\n",
     "# Save a png - Not opening correctly as a PNG\n",
-    "fig_4.figure.savefig('.\\output\\Windspeed-Lat.png')"
+    "fig_4.figure.savefig('.\\output\\Windspeed-Lat.png')\n",
+    "\n",
+    "#Fig_4 dipicts that wind spped is uniform across the globe.  The majority of wind speed is below 15 mph."
    ]
   },
   {
@@ -2549,7 +2559,11 @@
     "plt.show()\n",
     "\n",
     "#save graph\n",
-    "fig_5.figure.savefig('.\\output\\Lat-Temp-North.png')"
+    "fig_5.figure.savefig('.\\output\\Lat-Temp-North.png')\n",
+    "\n",
+    "#Fig_5 shows a high correlation between latitude and temperature in the Northern Hemisphere.  \n",
+    "#The high R-Sq value shows that 79% of the variation is explained from \n",
+    "#this correlation and supports the hypothesis that temperatures increase as cities approach the equator from the north. "
    ]
   },
   {
@@ -2616,7 +2630,11 @@
     "print(f\"The r-squared value is: {r_sq}\")\n",
     "plt.show()\n",
     "\n",
-    "fig_6.figure.savefig('.\\output\\Lat-Temp-South.png')"
+    "fig_6.figure.savefig('.\\output\\Lat-Temp-South.png')\n",
+    "\n",
+    "#Fig_6 shows a strong correlation between latitude and temperature in the Southern Hemisphere.  \n",
+    "#The high R-Sq value shows that 57% of the variation is explained from this correlation.  \n",
+    "#It shows that Southern Hemisphere cities’ temperatures increase as they approach the equator from the south, but less so than the Northern hemisphere. \n"
    ]
   },
   {
@@ -2682,7 +2700,10 @@
     "print(f\"The r-squared value is: {r_sq}\")\n",
     "plt.show()\n",
     "\n",
-    "fig_7.figure.savefig('.\\output\\Lat-Humd-North.png')"
+    "fig_7.figure.savefig('.\\output\\Lat-Humd-North.png')\n",
+    "\n",
+    "# The low R-sq value and the small slop shows that there is little correlation between humidity and latitude in the Northern Hemisphere.  \n",
+    "#It does show a high concentrations above 45-degree latitude which is worth investigating.\n"
    ]
   },
   {
@@ -2749,7 +2770,9 @@
     "print(f\"The r-squared value is: {r_sq}\")\n",
     "plt.show()\n",
     "\n",
-    "fig_7.figure.savefig('.\\output\\Lat-Humd-South.png')"
+    "fig_7.figure.savefig('.\\output\\Lat-Humd-South.png')\n",
+    "\n",
+    "#The flat slope and the zero R-sq value proves no correlation in the Southern Hemisphere. "
    ]
   },
   {
@@ -2816,7 +2839,10 @@
     "print(f\"The r-squared value is: {r_sq}\")\n",
     "plt.show()\n",
     "\n",
-    "fig_8.figure.savefig('.\\output\\Lat-Cloud-North.png')"
+    "fig_8.figure.savefig('.\\output\\Lat-Cloud-North.png')\n",
+    "\n",
+    "#The flat slope and the low R-sq value proves no correlation in the Northern Hemisphere. \n",
+    "#The bimodal distribution  near zero and near 100  is worth investigating further.\n"
    ]
   },
   {
@@ -2883,7 +2909,10 @@
     "print(f\"The r-squared value is: {r_sq}\")\n",
     "plt.show()\n",
     "\n",
-    "fig_9.figure.savefig('.\\output\\Lat-Cloud-South.png')"
+    "fig_9.figure.savefig('.\\output\\Lat-Cloud-South.png')\n",
+    "\n",
+    "#The flat slope and the low R-sq value proves no correlation in the Southern Hemisphere. \n",
+    "#The bimodal distribution  near zero and near 100  is worth investigating further.\n"
    ]
   },
   {
@@ -2950,7 +2979,9 @@
     "print(f\"The r-squared value is: {r_sq}\")\n",
     "plt.show()\n",
     "\n",
-    "fig_10.figure.savefig('.\\output\\Lat-Wind-North.png')"
+    "fig_10.figure.savefig('.\\output\\Lat-Wind-North.png')\n",
+    "\n",
+    "#The flat slope and the low R-sq value shows little correlation in the Northern Hemisphere. \n"
    ]
   },
   {
@@ -3016,7 +3047,9 @@
     "print(f\"The r-squared value is: {r_sq}\")\n",
     "plt.show()\n",
     "\n",
-    "fig_11.figure.savefig('.\\output\\Lat-Wind-South.png')"
+    "fig_11.figure.savefig('.\\output\\Lat-Wind-South.png')\n",
+    "\n",
+    "#The flat slope and the low R-sq value shows very little correlation in the Southern Hemisphere. "
    ]
   },
   {
