--- a/VacationPy1.ipynb
+++ b/VacationPy1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,7 @@
     "\n",
     "# Import API key\n",
     "from api_keys import g_key\n",
-    "\n",
-    "# Configure gmaps\n",
-    "gmaps.configure(api_key = g_key)"
+    "\n"
    ]
   },
   {
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +159,7 @@
        "4      AU  1.604115e+09  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,13 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "582d8dcd71194d5f902a1c070d73df07",
+       "model_id": "9491deadd3c64917b01f67ff3da9fd03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,6 +229,9 @@
    ],
    "source": [
     "# Create city humidity heat Map of all of Part 1s data \n",
+    "\n",
+    "# Configure gmaps\n",
+    "gmaps.configure(api_key = g_key)\n",
     "\n",
     "# Store latitude and longitude in locations\n",
     "locations = clean_city_data_test[[\"Lat\", \"Lng\"]]\n",
@@ -267,7 +268,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "clean_city_data_test.head()\n",
+    "# Reduce amount based on Weather criteria  Humidity <= 75.  Max Temp > 50.  Wind Speed <10.  Cloudiness <30\n",
+    "\n",
+    "ideal_city = clean_city_data_test.loc[(clean_city_data_test[\"Wind Speed\"] <10) & \n",
+    "                                      (clean_city_data_test[\"Humidity\"] < 75) &\n",
+    "                                      (clean_city_data_test[\"Max Temp\"]> 50) &\n",
+    "                                      (clean_city_data_test[\"Wind Speed\"] < 10) &\n",
+    "                                      (clean_city_data_test[\"Cloudiness\"] < 30)\n",
+    "                                     ]\n",
+    "\n",
+    "\n",
+    "ideal_city.to_csv(r'.\\output\\ideal_city.csv')\n",
+    "#ideal_city.head(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -300,120 +324,305 @@
        "      <th>Cloudiness</th>\n",
        "      <th>Country</th>\n",
        "      <th>Date</th>\n",
+       "      <th>Hotel Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>New Norfolk</td>\n",
        "      <td>33.28</td>\n",
        "      <td>134.15</td>\n",
-       "      <td>68.00</td>\n",
+       "      <td>68.0</td>\n",
        "      <td>30.0</td>\n",
        "      <td>3.36</td>\n",
        "      <td>20.0</td>\n",
        "      <td>AU</td>\n",
        "      <td>1.604115e+09</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
        "      <td>Yulara</td>\n",
        "      <td>21.23</td>\n",
        "      <td>81.63</td>\n",
-       "      <td>69.80</td>\n",
+       "      <td>69.8</td>\n",
        "      <td>64.0</td>\n",
        "      <td>3.36</td>\n",
        "      <td>0.0</td>\n",
        "      <td>AU</td>\n",
        "      <td>1.604115e+09</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>2</th>\n",
        "      <td>Hobart</td>\n",
        "      <td>43.32</td>\n",
        "      <td>145.57</td>\n",
-       "      <td>51.80</td>\n",
+       "      <td>51.8</td>\n",
        "      <td>53.0</td>\n",
        "      <td>9.17</td>\n",
        "      <td>20.0</td>\n",
        "      <td>AU</td>\n",
        "      <td>1.604115e+09</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
+       "      <th>3</th>\n",
        "      <td>Tairua</td>\n",
        "      <td>17.02</td>\n",
        "      <td>54.09</td>\n",
-       "      <td>73.40</td>\n",
+       "      <td>73.4</td>\n",
        "      <td>38.0</td>\n",
        "      <td>3.36</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NZ</td>\n",
        "      <td>1.604115e+09</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>74</th>\n",
+       "      <th>4</th>\n",
        "      <td>Mount Gambier</td>\n",
        "      <td>13.49</td>\n",
        "      <td>106.98</td>\n",
-       "      <td>85.60</td>\n",
+       "      <td>85.6</td>\n",
        "      <td>67.0</td>\n",
        "      <td>7.29</td>\n",
        "      <td>0.0</td>\n",
        "      <td>AU</td>\n",
        "      <td>1.604115e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>Kununurra</td>\n",
-       "      <td>-8.93</td>\n",
-       "      <td>125.41</td>\n",
-       "      <td>80.38</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>1.604115e+09</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             City    Lat     Lng  Max Temp  Humidity  Wind Speed  Cloudiness  \\\n",
-       "1     New Norfolk  33.28  134.15     68.00      30.0        3.36        20.0   \n",
-       "4          Yulara  21.23   81.63     69.80      64.0        3.36         0.0   \n",
-       "16         Hobart  43.32  145.57     51.80      53.0        9.17        20.0   \n",
-       "44         Tairua  17.02   54.09     73.40      38.0        3.36         0.0   \n",
-       "74  Mount Gambier  13.49  106.98     85.60      67.0        7.29         0.0   \n",
-       "84      Kununurra  -8.93  125.41     80.38      39.0        4.00         0.0   \n",
+       "            City    Lat     Lng  Max Temp  Humidity  Wind Speed  Cloudiness  \\\n",
+       "0    New Norfolk  33.28  134.15      68.0      30.0        3.36        20.0   \n",
+       "1         Yulara  21.23   81.63      69.8      64.0        3.36         0.0   \n",
+       "2         Hobart  43.32  145.57      51.8      53.0        9.17        20.0   \n",
+       "3         Tairua  17.02   54.09      73.4      38.0        3.36         0.0   \n",
+       "4  Mount Gambier  13.49  106.98      85.6      67.0        7.29         0.0   \n",
        "\n",
-       "   Country          Date  \n",
-       "1       AU  1.604115e+09  \n",
-       "4       AU  1.604115e+09  \n",
-       "16      AU  1.604115e+09  \n",
-       "44      NZ  1.604115e+09  \n",
-       "74      AU  1.604115e+09  \n",
-       "84      AU  1.604115e+09  "
+       "  Country          Date Hotel Name  \n",
+       "0      AU  1.604115e+09             \n",
+       "1      AU  1.604115e+09             \n",
+       "2      AU  1.604115e+09             \n",
+       "3      NZ  1.604115e+09             \n",
+       "4      AU  1.604115e+09             "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_city_data_test.head()\n",
-    "# Reduce amount based on Weather criteria  Humidity <= 75.  Max Temp > 50.  Wind Speed <10.  Cloudiness <30\n",
+    "# search for hotels & create new df\n",
     "\n",
-    "ideal_city = clean_city_data_test.loc[(clean_city_data_test[\"Wind Speed\"] <10) & \n",
-    "                                      (clean_city_data_test[\"Humidity\"] < 75) &\n",
-    "                                      (clean_city_data_test[\"Max Temp\"]> 50) &\n",
-    "                                      (clean_city_data_test[\"Wind Speed\"] < 10) &\n",
-    "                                      (clean_city_data_test[\"Cloudiness\"] < 30)\n",
-    "                                     ]\n",
+    "#import ideal cities\n",
+    "hotel_df = pd.read_csv('.\\output\\ideal_city.csv')\n",
     "\n",
-    "ideal_city.head(7)"
+    "# Add Hotel Name \n",
+    "hotel_df['Hotel Name'] = \"\"\n",
+    "del hotel_df['Unnamed: 0']\n",
+    "hotel_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-30-258dfc7cc320>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;31m#     print(json.dumps(response, indent=4, sort_keys=True))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m     \u001b[0mname_hotel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"results\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{name_hotel}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;31m#     try:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "# find closest hotels\n",
+    "\n",
+    "# Define key search parameters\n",
+    "keyword = \"hotel\"\n",
+    "radius = 5000\n",
+    "type = \"hotel\"\n",
+    "\n",
+    "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    lat = row[1]\n",
+    "    lng = row[2]\n",
+    "    lat_lon =f\"{lat},{lng}\"\n",
+    "    city = row[0]\n",
+    "    \n",
+    "    params = {\n",
+    "        \"location\": lat_lon,\n",
+    "        \"keyword\": keyword,\n",
+    "        \"radius\": radius,\n",
+    "        \"type\": type,\n",
+    "        \"key\": g_key\n",
+    "    }\n",
+    "    \n",
+    "    response = requests.get(base_url, params=params).json()    \n",
+    "    print(json.dumps(response, indent=4, sort_keys=True))\n",
+    "    \n",
+    "    name_hotel = response[\"results\"]\n",
+    "    print(f'{name_hotel}')\n",
+    "#     try:\n",
+    "#         hotel_name = response[\"results\"][\"name\"]      \n",
+    "#         hotel_df.loc[index, 'Hotel Name'] = hotel_name\n",
+    "#         print(f'{row[0]} is complete with hotel: {hotel_name}')\n",
+    "#     except Exception:\n",
+    "#         print(\"Missing field\")\n",
+    "#         hotel_df.loc[index, 'Hotel Name'] = \"No hotel\"\n",
+    "    print('--------')\n",
+    "\n",
+    "      \n",
+    "      \n",
+    "        \n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>New Norfolk</td>\n",
+       "      <td>33.28</td>\n",
+       "      <td>134.15</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "      <td>No hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Yulara</td>\n",
+       "      <td>21.23</td>\n",
+       "      <td>81.63</td>\n",
+       "      <td>69.8</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "      <td>No hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hobart</td>\n",
+       "      <td>43.32</td>\n",
+       "      <td>145.57</td>\n",
+       "      <td>51.8</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "      <td>No hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tairua</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>54.09</td>\n",
+       "      <td>73.4</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "      <td>No hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mount Gambier</td>\n",
+       "      <td>13.49</td>\n",
+       "      <td>106.98</td>\n",
+       "      <td>85.6</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>7.29</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1.604115e+09</td>\n",
+       "      <td>No hotel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            City    Lat     Lng  Max Temp  Humidity  Wind Speed  Cloudiness  \\\n",
+       "0    New Norfolk  33.28  134.15      68.0      30.0        3.36        20.0   \n",
+       "1         Yulara  21.23   81.63      69.8      64.0        3.36         0.0   \n",
+       "2         Hobart  43.32  145.57      51.8      53.0        9.17        20.0   \n",
+       "3         Tairua  17.02   54.09      73.4      38.0        3.36         0.0   \n",
+       "4  Mount Gambier  13.49  106.98      85.6      67.0        7.29         0.0   \n",
+       "\n",
+       "  Country          Date Hotel Name  \n",
+       "0      AU  1.604115e+09   No hotel  \n",
+       "1      AU  1.604115e+09   No hotel  \n",
+       "2      AU  1.604115e+09   No hotel  \n",
+       "3      NZ  1.604115e+09   No hotel  \n",
+       "4      AU  1.604115e+09   No hotel  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel_df.head() "
    ]
   },
   {
@@ -421,7 +630,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# find the closest hotel of each type to coordinates\n",
+    "\n",
+    "url = \"https://maps.googleapis.com/maps/api/place/findplacefromtext/json?\"\n",
+    "\n",
+    "params = {\n",
+    "    \"input\": \"hotel\",\n",
+    "    \"fields\":\"name, rating\",   \n",
+    "    \"locationbias\": \"circle:5000\",\n",
+    "    \"key\": g_key,\n",
+    "}\n",
+    "\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    location = row[\"City\"]\n",
+    "    params['keyword'] = location\n",
+    "    \n",
+    "#     print(f\"Retriving Results for Index{index} hotel is {results['name']}.\")\n",
+    "    response = requests.get(url, params=params).json()\n",
+    "    \n",
+    "    results = response['results']\n",
+    "    try:\n",
+    "        hotel_df.loc[index, 'Hotel Name'] = results['name']\n",
+    "    except Exception:\n",
+    "        print(\"Missing result...skipping.\")\n",
+    "    print('-------')\n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -434,6 +670,24 @@
     "* Hit the Google Places API for each city's coordinates.\n",
     "* Store the first Hotel result into the DataFrame.\n",
     "* Plot markers on top of the heatmap."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How to Create Markers on a Gmap (Census_States)\n",
+    "# # Create a map using state centroid coordinates to set markers\n",
+    "# marker_locations = census_data[['Latitude', 'Longitude']]\n",
+    "\n",
+    "# # Create a marker_layer using the poverty list to fill the info box\n",
+    "# fig = gmaps.figure()\n",
+    "# markers = gmaps.marker_layer(marker_locations,\n",
+    "#     info_box_content=[f\"Poverty Rate: {rate}\" for rate in poverty_rate])\n",
+    "# fig.add_layer(markers)\n",
+    "# fig"
    ]
   },
   {
