--- a/VacationPy1.ipynb
+++ b/VacationPy1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "5      MU  1.604115e+09  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -212,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33695a24e54c4a81ad5f9a870404d115",
+       "model_id": "b40d743064574e0eba68092e249dcc9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "4      SB             "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -600,33 +600,117 @@
        "      <td>SB</td>\n",
        "      <td>Radisson Blu Polar Hotel, Spitsbergen</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Albany</td>\n",
+       "      <td>78.22</td>\n",
+       "      <td>15.64</td>\n",
+       "      <td>17.60</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>Radisson Blu Polar Hotel, Spitsbergen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Grand River South East</td>\n",
+       "      <td>70.37</td>\n",
+       "      <td>31.11</td>\n",
+       "      <td>34.03</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>6.80</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>Vardø Hotel AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Mahebourg</td>\n",
+       "      <td>62.27</td>\n",
+       "      <td>21.38</td>\n",
+       "      <td>42.17</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>5.14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>Hotel Alma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Albany</td>\n",
+       "      <td>70.37</td>\n",
+       "      <td>31.11</td>\n",
+       "      <td>34.03</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>6.80</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>Vardø Hotel AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Saint-Joseph</td>\n",
+       "      <td>78.22</td>\n",
+       "      <td>15.64</td>\n",
+       "      <td>17.60</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>RE</td>\n",
+       "      <td>Radisson Blu Polar Hotel, Spitsbergen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Obluche</td>\n",
+       "      <td>40.59</td>\n",
+       "      <td>23.03</td>\n",
+       "      <td>57.20</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>Panorama Hotel</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             City    Lat    Lng  Max Temp  Humidity  Wind Speed  Cloudiness  \\\n",
-       "0      Bredasdorp  78.22  15.64     17.60      72.0        1.12        20.0   \n",
-       "1  Port Elizabeth  56.00   8.13     46.99      75.0        9.66        16.0   \n",
-       "2      Bredasdorp  78.22  15.64     17.60      72.0        1.12        20.0   \n",
-       "3       Busselton  78.22  15.64     17.60      72.0        1.12        20.0   \n",
-       "4        Kirakira  78.22  15.64     17.60      72.0        1.12        20.0   \n",
+       "                      City    Lat    Lng  Max Temp  Humidity  Wind Speed  \\\n",
+       "0               Bredasdorp  78.22  15.64     17.60      72.0        1.12   \n",
+       "1           Port Elizabeth  56.00   8.13     46.99      75.0        9.66   \n",
+       "2               Bredasdorp  78.22  15.64     17.60      72.0        1.12   \n",
+       "3                Busselton  78.22  15.64     17.60      72.0        1.12   \n",
+       "4                 Kirakira  78.22  15.64     17.60      72.0        1.12   \n",
+       "5                   Albany  78.22  15.64     17.60      72.0        1.12   \n",
+       "6   Grand River South East  70.37  31.11     34.03      87.0        6.80   \n",
+       "7                Mahebourg  62.27  21.38     42.17      87.0        5.14   \n",
+       "8                   Albany  70.37  31.11     34.03      87.0        6.80   \n",
+       "9             Saint-Joseph  78.22  15.64     17.60      72.0        1.12   \n",
+       "10                 Obluche  40.59  23.03     57.20      58.0        9.17   \n",
        "\n",
-       "  Country                             Hotel Name  \n",
-       "0      ZA  Radisson Blu Polar Hotel, Spitsbergen  \n",
-       "1      ZA                    Drivethru Surfcamps  \n",
-       "2      ZA  Radisson Blu Polar Hotel, Spitsbergen  \n",
-       "3      AU  Radisson Blu Polar Hotel, Spitsbergen  \n",
-       "4      SB  Radisson Blu Polar Hotel, Spitsbergen  "
+       "    Cloudiness Country                             Hotel Name  \n",
+       "0         20.0      ZA  Radisson Blu Polar Hotel, Spitsbergen  \n",
+       "1         16.0      ZA                    Drivethru Surfcamps  \n",
+       "2         20.0      ZA  Radisson Blu Polar Hotel, Spitsbergen  \n",
+       "3         20.0      AU  Radisson Blu Polar Hotel, Spitsbergen  \n",
+       "4         20.0      SB  Radisson Blu Polar Hotel, Spitsbergen  \n",
+       "5         20.0      AU  Radisson Blu Polar Hotel, Spitsbergen  \n",
+       "6         27.0      MU                         Vardø Hotel AS  \n",
+       "7          1.0      MU                             Hotel Alma  \n",
+       "8         27.0      AU                         Vardø Hotel AS  \n",
+       "9         20.0      RE  Radisson Blu Polar Hotel, Spitsbergen  \n",
+       "10         0.0      RU                         Panorama Hotel  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hotel_df.head()\n",
+    "hotel_df.head(15)\n",
     "# print(hotel_df[['Lat', 'Lng']])"
    ]
   },
@@ -645,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -653,7 +737,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33695a24e54c4a81ad5f9a870404d115",
+       "model_id": "b40d743064574e0eba68092e249dcc9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -676,8 +760,8 @@
     "\n",
     "fig_14 = gmaps.figure()\n",
     "markers = gmaps.marker_layer(marker_locations, \n",
-    "                            info_box_content=[f\"Hotel Name: {hotel}\" for hotel in hotel_name])\n",
-    "\n",
+    "                            info_box_content=[f\"{hotel}\" for hotel in hotel_name])\n",
+    "                            \n",
     "fig_13.add_layer(markers)\n",
     "fig_13"
    ]
